[Modified]To solve the z-index conflicts, mainly Concerts#index pages were checked again

--- a/app/assets/stylesheets/concerts.scss
+++ b/app/assets/stylesheets/concerts.scss
@@ -60,7 +60,7 @@
 	width: 150px;
 	height: 80px;
 	margin: 0;
-	padding: 20px 0;
+	// padding: 20px 0;
 }
 .sp-thumbnail-title {
 	font-size: 12px;
